estrutura padrao do plugin criada

--- a/demo.htm
+++ b/demo.htm
@@ -7,11 +7,13 @@
 	<link rel="stylesheet" media="screen" href="libs/ui-lightness/jquery-ui-1.8.16.custom.css" >
 </head>
 <body>
-	<div id="body"></div>
-
-	<span class="teste">1</span>
-	<span class="teste">2</span>
-	<span class="teste">3</span>
+	<form id="form1">
+		<input type="text" name="nome"/>
+	</form>
+	
+	<form id="form2">
+		<input type="text" name="login"/>
+	</form>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
